files/vap-cis-enforce-runasnonroot-policy-binding.yml
# Validating Admission Policy
# Name: Non-root containers
#       Container engines allow containers to run applications as a non-root user with non-root group membership.
#       Typically, this non-default setting is configured when the container image is built.
#       Alternatively, Kubernetes can load containers into a Pod with SecurityContext:runAsUser specifying a non-zero user.
#       While the runAsUser directive effectively forces non-root execution at deployment,
#       NSA and CISA encourage developers to build container applications to execute as a non-root user.
#       Having non-root execution integrated at build time provides better assurance that applications will function correctly without root privileges.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0013
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-enforce-runasnonroot-policy-binding"
spec:
  policyName: "vap-cis-enforce-runasnonroot-policy"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - kube-node-lease
        - kube-public
        - kube-system
        - calico-apiserver
        - calico-system
        - tigera-operator
        - istio-system
