files/vap-cis-minimize-addition-of-limited-capabilities-policy-binding.yml
# Validating Admission Policy
# Name: Minimize the admission of containers with added capabilities
#       Containers run with a default set of capabilities as assigned by the Container Runtime.
#       Capabilities outside this set can be added to containers which could expose them to risks of container breakout attacks.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0200
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-minimize-addition-of-limited-capabilities-policy-binding"
spec:
  policyName: "vap-cis-minimize-addition-of-limited-capabilities-policy"
  validationActions: [Deny]
  paramRef:
    name: exclude-system-namespace-list
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
