files/vap-cis-minimize-privileged-containers-policy-binding.yml
# Validating Admission Policy
# Name: Minimize the admission of privileged containers
#       Privileged containers have access to all Linux Kernel capabilities and devices.
#       A container running with full privileges can do almost everything that the host can do.
#       This flag exists to allow special use-cases, like manipulating the network stack and accessing devices.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0213
# Severity: High

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-minimize-privileged-containers-policy-binding"
spec:
  policyName: "vap-cis-minimize-privileged-containers-policy"
  validationActions: [Deny]
  paramRef:
    name: validation-parameters
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
