files/vap-cis-minimize-sharing-host-ipc-namespace-policy-binding.yml
# Validating Admission Policy
# Name: Minimize the admission of privileged hostIPC
#       A container running in the host's IPC namespace can use IPC to interact with processes outside the container.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0215
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-minimize-sharing-host-ipc-namespace-policy-binding"
spec:
  policyName: "vap-cis-minimize-sharing-host-ipc-namespace-policy"
  validationActions: [Deny]
  paramRef:
    name: validation-parameters
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
