files/vap-cis-minimize-sharing-host-network-policy-binding.yml
# Validating Admission Policy
# Name: Minimize the admission of containers wishing to share the host network namespace
#       A container running in the host's network namespace could access the local loopback device, and could access network traffic to and from other pods.
# Author: Abhijit Jadhav
# Docs: https://hub.armosec.io/docs/c-0216
# Severity: Medium

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "vap-cis-minimize-sharing-host-network-policy-binding"
spec:
  policyName: "vap-cis-minimize-sharing-host-network-policy"
  validationActions: [Deny]
  paramRef:
    name: exclude-system-namespace-list
    parameterNotFoundAction: "Deny"
  matchResources: {}

### The namespace exclusion logic now moved into CRD, Parameter and embeded in Policy. This gives more flexibility on managing and maintaing common exclusions
### You can still exclude additional app namespaces which are specific to the policy exclusion using following matchExpressions
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#     - key: kubernetes.io/metadata.name
#       operator: NotIn
#       values:
#       - app-one-namespace
#       - app-two-namespace
###
### OR using labels
###
# matchResources:
#   namespaceSelector:
#     matchExpressions:
#       namsSpaceSelector:
#         matchLabels:
#           environment: prod
